# GearboxEmbedded

./: CMakeLists.txt  blink.c  dht22_sensor.c  diagram.json  wokwi.toml
